argocd/applications/huly/stats/stats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stats
  name: stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats
  template:
    metadata:
      labels:
        app: stats
    spec:
      containers:
        - image: hardcoreeng/stats:v0.7.375
          name: stats
          ports:
            - containerPort: 4900
              protocol: TCP
          resources:
            limits:
              memory: "500M"
      restartPolicy: Always
