argocd/applications/huly/stats/stats-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stats
spec:
  entryPoints:
    - websecure
  tls:
    secretName: huly-wildcard-tls
  routes:
    - match: Host(`stats.huly.proompteng.ai`)
      kind: Rule
      services:
        - name: stats
          port: 80
